--- a/WPF/MVVM/WPFTests/packages.config
+++ b/WPF/MVVM/WPFTests/packages.config
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JustMock" version="2017.2.821.1" targetFramework="net462" />
+  <package id="JustMock" version="2019.1.207.1" targetFramework="net472" />
   <package id="Machine.Specifications" version="0.12.0" targetFramework="net462" />
   <package id="mbunit" version="3.4.14.0" targetFramework="net451" />
-  <package id="xunit" version="2.3.0" targetFramework="net462" />
-  <package id="xunit.abstractions" version="2.0.1" targetFramework="net462" />
-  <package id="xunit.analyzers" version="0.7.0" targetFramework="net462" />
-  <package id="xunit.assert" version="2.3.0" targetFramework="net462" />
-  <package id="xunit.core" version="2.3.0" targetFramework="net462" />
-  <package id="xunit.extensibility.core" version="2.3.0" targetFramework="net462" />
-  <package id="xunit.extensibility.execution" version="2.3.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.5.1" targetFramework="net472" />
+  <package id="xunit" version="2.4.1" targetFramework="net472" />
+  <package id="xunit.abstractions" version="2.0.3" targetFramework="net472" />
+  <package id="xunit.analyzers" version="0.10.0" targetFramework="net472" />
+  <package id="xunit.assert" version="2.4.1" targetFramework="net472" />
+  <package id="xunit.core" version="2.4.1" targetFramework="net472" />
+  <package id="xunit.extensibility.core" version="2.4.1" targetFramework="net472" />
+  <package id="xunit.extensibility.execution" version="2.4.1" targetFramework="net472" />
 </packages>
