updates to C#8 code samples

--- a/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp8/WhatsNewInCSharp8.csproj
+++ b/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp8/WhatsNewInCSharp8.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <LangVersion>8.0</LangVersion>
-    <NullableReferenceTypes>true</NullableReferenceTypes>
+    <LangVersion>preview</LangVersion>
+    <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
 </Project>
