added presentation notes fixed namespaces

--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/SpyStore.Mvc.csproj
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/SpyStore.Mvc.csproj
@@ -22,4 +22,10 @@
     <ProjectReference Include="..\SpyStore.Models\SpyStore.Models.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
