updates from NO talks

--- a/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Properties/launchSettings.json
+++ b/DOTNETCORE/ASP.NETCore/SpyStore/SpyStore.Mvc/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "SpyStore.Hol.Mvc": {
+    "SpyStore.Mvc": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5000",
