--- a/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp8/WhatsNewInCSharp8.csproj
+++ b/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp8/WhatsNewInCSharp8.csproj
@@ -4,4 +4,7 @@
     <LangVersion>preview</LangVersion>
     <NullableContextOptions>enable</NullableContextOptions>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningsAsErrors>NU1605;</WarningsAsErrors>
+  </PropertyGroup>
 </Project>
