--- a/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp8_Tests/WhatsNewInCSharp8_Tests.csproj
+++ b/CSharp/WhatsNewInCSharp7/WhatsNewInCSharp8_Tests/WhatsNewInCSharp8_Tests.csproj
@@ -3,8 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <IsPackable>false</IsPackable>
-    <LangVersion>8.0</LangVersion>
-    <NullableReferenceTypes>true</NullableReferenceTypes>
+    <LangVersion>preview</LangVersion>
+    <NullableContextOptions>enable</NullableContextOptions>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <WarningsAsErrors>NU1605;CS8625;CS8602;</WarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
