fixing swagger integration

--- a/.gitignore
+++ b/.gitignore
@@ -208,3 +208,5 @@ _Pvt_Extensions/
 ModelManifest.xml
 /Chapters/Chapter05-EF/Chapter05-EF-Images.zip
 CodeSamples/Chapter09-React/SpyStore.React.Final/src/SpyStore.React/.idea/
+DOTNETCORE/ASP.NETCore/VersioningAPIs/aspnet-api-versioning-master.zip
+DOTNETCORE/ASP.NETCore/VersioningAPIs/aspnet-api-versioning-master/
