--- a/DOTNETCORE/ASP.NETCore/VersioningAPIs/Japikse_VersioningAPIs/SwaggerIntegration_Old/Properties/launchSettings.json
+++ b/DOTNETCORE/ASP.NETCore/VersioningAPIs/Japikse_VersioningAPIs/SwaggerIntegration_Old/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/values",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,8 +20,8 @@
     "QueryStringVersioning": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/values",
-      "applicationUrl": "http://localhost:5000",
+      "launchUrl": "http://localhost:5000/swagger",
+//      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
