two more core 3 changes

--- a/DOTNETCORE/ASP.NETCore/SpyStore3/SpyStore.Mvc/appsettings.Development.json
+++ b/DOTNETCORE/ASP.NETCore/SpyStore3/SpyStore.Mvc/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "SpyStore": "Server=.,9433;Database=SpyStoreHol30;User ID=sa;Password=P@ssw0rd;MultipleActiveResultSets=true;",
+    "SpyStore": "Server=.,9433;Database=SpyStoreHol30;User ID=sa;Password=P@ssw0rd;MultipleActiveResultSets=true;"
     //"SpyStore": "Server=(localdb)\\mssqllocaldb;Database=SpyStoreHol30;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
   "CustomSettings": {
