updates to whats new in .NET Core 3

--- a/DOTNETCORE/WhatsNewInDotNet3/PublishImprovements/PublishImprovements.csproj
+++ b/DOTNETCORE/WhatsNewInDotNet3/PublishImprovements/PublishImprovements.csproj
@@ -8,6 +8,8 @@
   <PropertyGroup>
     <RuntimeIdentifier>win10-x64</RuntimeIdentifier>
     <PublishSingleFile>true</PublishSingleFile>
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <PublishTrimmed>true</PublishTrimmed>
   </PropertyGroup>
 
 </Project>
