--- a/DOTNETCORE/EFCoreSamples/14_Repositories/14_Repositories.csproj
+++ b/DOTNETCORE/EFCoreSamples/14_Repositories/14_Repositories.csproj
@@ -7,9 +7,10 @@
     <AssemblyName>Repositories</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="1.1.0-preview2.19309.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0-preview3.19554.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.0-preview3.19554.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0-preview3.19554.8" />
   </ItemGroup>
 
 </Project>
