--- a/DOTNETCORE/EFCoreSamples/MixedEvaluation/09_MixedEvaluation.csproj
+++ b/DOTNETCORE/EFCoreSamples/MixedEvaluation/09_MixedEvaluation.csproj
@@ -7,9 +7,9 @@
     <RootNamespace>MixedEvaluation</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.2.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0-preview3.19554.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.0-preview3.19554.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0-preview3.19554.8" />
   </ItemGroup>
 
 </Project>
