--- a/DOTNETCORE/EFCoreSamples/Performance/packages.config
+++ b/DOTNETCORE/EFCoreSamples/Performance/packages.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net47" />
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net47" />
+  <package id="Microsoft.CSharp" version="4.7.0-preview3.19551.4" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore" version="2.2.4" targetFramework="net47" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="2.2.4" targetFramework="net47" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="2.2.4" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Relational" version="2.2.4" targetFramework="net47" />
   <package id="Microsoft.EntityFrameworkCore.SqlServer" version="2.2.4" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Caching.Abstractions" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.0-preview3.19553.2" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Memory" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Configuration" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.2.0" targetFramework="net472" />
@@ -17,7 +17,7 @@
   <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net47" />
-  <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.0-preview3.19553.2" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net47" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net47" />
   <package id="System.Collections" version="4.3.0" targetFramework="net47" />
@@ -36,7 +36,7 @@
   <package id="System.Reflection" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime" version="4.3.1" targetFramework="net47" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0-preview3.19551.4" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.3.1" targetFramework="net47" />
   <package id="System.Threading" version="4.3.0" targetFramework="net47" />
 </packages>
