--- a/DOTNETCORE/Channel9_EFCoreShows/EntityFrameworkCoreExamples/PerformanceEfCore/01_PerformanceEfCore.csproj
+++ b/DOTNETCORE/Channel9_EFCoreShows/EntityFrameworkCoreExamples/PerformanceEfCore/01_PerformanceEfCore.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <ApplicationIcon />
     <StartupObject />
   </PropertyGroup>
