validation/model binding examples

--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/AutoLot.Web.csproj
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/AutoLot.Web.csproj
@@ -23,4 +23,8 @@
       <ProjectReference Include="..\AutoLot.Dal\AutoLot.Dal.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Views\Shared\Partials\" />
+    </ItemGroup>
+
 </Project>
