working on the final edits

--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.API/appsettings.json
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.API/appsettings.json
@@ -6,10 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "DealerInfo": {
-    "DealerName": "Skimedic's Used Cars",
-    "City": "West Chester",
-    "State": "Ohio"
-  }
+  "AllowedHosts": "*"
 }
