--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/appsettings.Local.json
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/appsettings.Local.json
@@ -6,7 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "RebuildDataBase":  true, 
+  "RebuildDataBase":  false, 
   "ConnectionStrings": {
     //SQL Server Local Db
     //"AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot2;Trusted_Connection=True;"
