--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/appsettings.Production.json
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/appsettings.Production.json
@@ -6,10 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "DealerInfo": {
-    "DealerName": "Skimedic's Used Cars",
-    "City": "West Chester",
-    "State": "Ohio"
+  "ConnectionStrings": {
+    "AutoLot": "ImNotGoingToTellYou"
   }
+
 }
