--- a/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Properties/launchSettings.json
+++ b/DOTNETCORE/ASP.NETCore/AutoLot/AutoLot.Web/Properties/launchSettings.json
@@ -12,15 +12,16 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       }
     },
     "AutoLot.Web": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5003;http://localhost:5002",
+      //Defaults to 5001,5000
+      "applicationUrl": "https://localhost:5011;http://localhost:5010",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "local"
       }
     }
   }
