tidying up the pages

--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.Development.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.Development.json
@@ -7,7 +7,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "RebuildDataBase":  true, 
+  "RebuildDataBase":  false, 
   "ConnectionStrings": {
     //SQL Server Local Db
     //"AutoLot": "Server=(localdb)\\MSSQLLocalDB;Database=AutoLot50;Trusted_Connection=True;"
