--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/appsettings.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/appsettings.json
@@ -1,11 +1,12 @@
 {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "MSSqlServer": {
+      "schema": "Logging",
+      "tableName": "SeriLogs",
+      "restrictedToMinimumLevel": "Warning"
     }
   },
+  "ApplicationName": "AutoLot.MVC",
   "AllowedHosts": "*",
   "DealerInfo": {
     "DealerName": "Skimedic's Used Cars",
