--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.json
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/appsettings.json
@@ -1,15 +1,17 @@
-{
+  {
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "MSSqlServer": {
+      "schema": "Logging",
+      "tableName": "SeriLogs",
+      "restrictedToMinimumLevel": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "DealerInfo": {
-    "DealerName": "Skimedic's Used Cars",
-    "City": "West Chester",
-    "State": "Ohio"
+  "ApplicationName": "AutoLot.Web",
+
+    "AllowedHosts": "*",
+    "DealerInfo": {
+      "DealerName": "Skimedic's Used Cars",
+      "City": "West Chester",
+      "State": "Ohio"
+    }
   }
-}
