--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/AutoLot.Mvc.csproj
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Mvc/AutoLot.Mvc.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AutoLot.Dal\AutoLot.Dal.csproj" />
     <ProjectReference Include="..\AutoLot.Models\AutoLot.Models.csproj" />
+    <ProjectReference Include="..\AutoLot.Services\AutoLot.Services.csproj" />
   </ItemGroup>
 
 	<ItemGroup>
