--- a/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/AutoLot.Web.csproj
+++ b/DOTNETCORE/ASP.NETCore/v5.0/AutoLot50/AutoLot.Web/AutoLot.Web.csproj
@@ -16,6 +16,7 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\AutoLot.Dal\AutoLot.Dal.csproj" />
 	  <ProjectReference Include="..\AutoLot.Models\AutoLot.Models.csproj" />
+	  <ProjectReference Include="..\AutoLot.Services\AutoLot.Services.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
